# test_evaluator

./: .gitignore  LICENSE  README.md  e2edev_sample.csv  package.json  project.md  pyproject.toml
calibration/: README.md  golden_basic_v1.json
example_analysis/basic_E2ESD_Bench_01,E2ESD_Bench_02/: config.json  evaluation.json  inventory.json  run_manifest.json  summary.md
example_analysis/full_E2ESD_Bench_01/: config.json  evaluation.json  inventory.json  mutation_calibration.json  run_manifest.json  summary.md
plan/: project.md  proposal.md
src/test_evaluator/: __init__.py  agents.py  calibration.py  cli.py  coverage.py  dataflow.py  dataset.py  dynamic_evidence.py  evidence.py  grounding.py  ingest.py  instrument_js.cjs  llm.py  materializer.py  mutation_calibration.py  orchestrator.py  reporting.py  runner.py  runtime_trace.py  schemas.py  scoring.py  source_model.py  stability.py  state_machine.py  static_mutation.py  static_verifier.py  suite_analysis.py  trends.py
src/test_evaluator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_calibration.py  test_dataflow.py  test_dataset.py  test_dynamic_evidence.py  test_evidence.py  test_full_scoring.py  test_ingest_and_static.py  test_llm_cache.py  test_materializer.py  test_mutation.py  test_mutation_calibration.py  test_orchestrator_states.py  test_reporting.py  test_runner.py  test_runtime_trace_coverage.py  test_scoring.py  test_source_grounding.py  test_stability.py  test_state_machine.py  test_static_mutation.py  test_suite_analysis.py  test_trends.py
(+1084 files in other folders)
