[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "test-evaluator"
version = "0.1.0"
description = "Evidence-driven multi-agent evaluator for BDD/Selenium tests."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.109.1",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
test-evaluator = "test_evaluator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
