[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "test-evaluator"
version = "1.4.0"
description = "Evidence-driven multi-agent evaluator for BDD/Selenium tests."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.109.1",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
full = ["behave", "selenium"]

[project.scripts]
test-evaluator = "test_evaluator.cli:main"
test-evaluator-calibrate = "test_evaluator.calibration:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
test_evaluator = ["*.cjs"]
